2019-02-10  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_model_insn_after): Remove dead code. Fix
	name of function argument.

2019-02-10  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (sim_open): Initialize sd->orig_cpu to NULL.
	(epiphany_sim_close): Null check sd->orig_cpu before doing
	anything.

2019-02-10  Ola Jeppsson  <ola@adapteva.com>

	* dv-epiphany_dma.c (union dma_stride): Make src_stride and
	dst_stride signed types.
	(epiphany_dma_hw_event_callback): Support negative strides.

2017-09-06  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in (tryhex): New function.
	(which): Check in current working directory if not found in path.
	(spawn): Convert epiphany-elf-run arguments to hex where it makes
	sense.
	(parse_or_die): Don't let presets override other command-line
	options.

2017-09-06  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (find_sym): New function.
	(epiphany_user_init): Do not move stack if __stack is a global
	address.

2017-04-09  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Do not use += operator for appending to
	variables. It is not Bourne Shell compatible.
	* configure: Regenerated.

2016-11-17  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_validate_cluster_cfg): Allow
	non power of two core_phys_mem.
	(es_init_impl): Truncate core_phys_mem to ES_CORE_MMR_BASE.

2016-11-17  Ola Jeppsson  <ola@adapteva.com>

	* sim-if.c (epiphany_user_init): New function.
	(sim_create_inferior): Fix copying of argv. Call epiphany_user_init
	in USER_ENVIRONMENT.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-fp.c (float_as_int): Make static inline.
	(int_as_float): Likewise.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* config.in: Regenerated.
	* configure: Regenerated.

2016-10-27  Ola Jeppsson  <ola@adapteva.com>

	* arch.c: Regenerated.
	* arch.h: Regenerated.
	* cpu.c: Regenerated.
	* cpu.h: Regenerated.
	* cpuall.h: Regenerated.
	* decode.c: Regenerated.
	* decode.h: Regenerated.